<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Warehouse</string>
    <string name="action_settings">Settings</string>

    <!--Login-->
    <string name="account">帳號</string>
    <string name="password">密碼</string>
    <string name="keep_account_info">紀錄登入帳號</string>
    <string name="getpassword">忘記ID或密碼</string>
    <string name="version_name" translatable="false">v <xliff:g example="0.01" id="version">{version}</xliff:g></string>
    <string name="loading">載入中…</string>

    <!--button-->
    <string name="btn_confirm">確  認</string>
    <string name="btn_back">返回</string>
    <string name="on_sell">已上架</string>

    <!--Alert and progress-->
    <string name="login_error">帳號或密碼錯誤</string>
    <string name="get_user_info_error">用戶數據取得失敗,請重新登入</string>
    <string name="getdata_error">數據取得失敗，請稍後再試</string>
    <string name="serach_error">查無資料</string>
    <string name="login_please_wait">登入中…</string>
    <string name="login_timeout">網路連線超時</string>
    <string name="no_network">未連接到網路，請檢察網路設定。</string>
    <string name="get_user_info">取得用户數據…</string>

    <!--Main menu button-->
    <string name="classify">分類查詢</string>
    <string name="sign_out">登出</string>
    <string name="make_sure_to_sign_out">是否確定退出此次登入</string>
    <string name="confirm_sign_out">確認退出</string>
    <string name="cancel_sign_out">點錯了不退出</string>
    <string name="commodity_management">商品管理</string>

    <!--list-->
    <string name="product_name">商品名稱</string>
    <string name="product_quantity">商品數量</string>

    <!--search-->
    <string name="hint_search_product">輸入要查詢的商品名稱…</string>
    <string name="none_search_result">查無資料</string>

</resources>
