<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearLayout">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/version_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="28dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/green"
        tools:text="@string/version_name"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/TextView.LoginText"
            android:text="@string/account" />

        <EditText
            android:id="@+id/edit_account"
            style="@style/EditText.Account"
            tools:text="Normal" />

        <TextView
            style="@style/TextView.LoginText"
            android:layout_marginTop="24dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/edit_password"
            style="@style/EditText.Password"
            android:imeOptions="actionDone"
            tools:text="Click State" />

        <CheckBox
            android:id="@+id/keeplogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:button="@drawable/check"
            android:text="@string/keep_account_info"
            android:textColor="@color/green"
            android:textSize="14sp" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_confirm"
        style="@style/Button.YellowBtn"
        android:layout_marginTop="56dp"
        android:text="@string/btn_confirm" />

</LinearLayout>